examples/test/testpolicy5480.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5480
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key29: value28
      key46: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value48
          key5: value17
      podSelector:
        matchLabels:
          key12: value39
          key6: value7
